alignment fix

--- a/SEG3125-Module2-Grocery/styles/style.css
+++ b/SEG3125-Module2-Grocery/styles/style.css
@@ -52,7 +52,9 @@
 }
 
 
-
+.image{
+  text-align: center;
+}
 .bottomimage{
   text-align: center;
 }
